force-app/main/default/objects/MyOrgButler__c/MyOrgButler__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>My Org Butler</label>
</CustomObject>