force-app/main/default/objects/MyOrgButler__c/fields/DevAssistantId__c.field-meta.xml
<CustomField>
    <fullName>DevAssistantId__c</fullName>
    <externalId>true</externalId>
    <label>OpenAI Assitent Id (Dev)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>