force-app/main/default/objects/MyOrgButler__c/fields/ExtractorApiKey__c.field-meta.xml
<CustomField>
    <fullName>ExtractorApiKey__c</fullName>
    <label>Extractor API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>