force-app/main/default/objects/MyOrgButler__c/fields/ProdAssistantId__c.field-meta.xml
<CustomField>
    <fullName>ProdAssistantId__c</fullName>
    <externalId>true</externalId>
    <label>OpenAI Assitent Id (Prod)</label>
    <description>OpenAi Assistant Id use in Production Orgs</description>
    <length>80</length>
    <type>Text</type>
</CustomField>