force-app/main/default/objects/MyOrgButler__c/fields/RunId__c.field-meta.xml
<CustomField>
    <fullName>RunId__c</fullName>
    <externalId>true</externalId>
    <label>Run Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>