force-app/main/default/objects/MyOrgButler__c/fields/SearchApiKey__c.field-meta.xml
<CustomField>
    <fullName>SearchApiKey__c</fullName>
    <label>Search API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>