force-app/main/default/objects/MyOrgButler__c/fields/TavilyApiKey__c.field-meta.xml
<CustomField>
    <fullName>TavilyApiKey__c</fullName>
    <label>Tavily API Key</label>
    <description>API Key for Tavily Search</description>
    <length>80</length>
    <type>Text</type>
</CustomField>