force-app/main/default/objects/MyOrgButler__c/fields/ThreadId__c.field-meta.xml
<CustomField>
    <fullName>ThreadId__c</fullName>
    <label>Thread Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>